<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".settings.AltAudioSettingsFragment">

    <data>
        <variable
            name="viewModel"
            type="com.github.overtane.audiotester.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/alt_settings_motion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/motionscene_alt_settings">

    <ScrollView
        android:id="@+id/alt_settings_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/audio_type_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:textSize="@dimen/text_size_subtitle"
                android:textStyle="bold"
                android:text="@string/alternate_settings_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_audio_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio_type_title">

                <RadioGroup
                    android:id="@+id/radio_group_sample_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_weight="1"
                    android:onCheckedChanged="@{(view, id) -> viewModel.onAudioFormatChanged(view, id)}">

                    <RadioButton
                        android:id="@+id/radio_button_sample_rate_44_1khz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/samplerate_44_1_khz_text" />

                    <RadioButton
                        android:id="@+id/radio_button_sample_rate_48khz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/samplerate_48_khz_text" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radio_group_channel_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_weight="1"
                    android:onCheckedChanged="@{(view, id) -> viewModel.onAudioFormatChanged(view, id)}">

                    <RadioButton
                        android:id="@+id/radio_button_channel_count_mono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/channel_count_mono_text" />

                    <RadioButton
                        android:id="@+id/radio_button_channel_count_stereo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/channel_count_stereo_text" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_audio_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_audio_format">

            <RadioGroup
                android:id="@+id/radio_group_audio_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onCheckedChanged="@{(view, id) -> viewModel.onAudioSourceChanged(view, id)}">

                <RadioButton
                    android:id="@+id/radio_button_audio_source_sine_wave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/source_sine_wave_text"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_button_audio_source_white_noise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/source_white_noise_text"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_button_audio_source_silence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/source_silence_text"
                    android:layout_weight="1"/>

            </RadioGroup>

            <TextView
                android:id="@+id/text_duration_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                app:audioDuration="@{viewModel.duration}"
                android:text="@string/source_duration_text" />

            <SeekBar
                android:id="@+id/slider_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:min="@integer/audio_duration_min"
                android:max="@integer/audio_duration_max"
                android:onProgressChanged="@{(view, progress, fromUser) -> viewModel.onProgressChanged(view, progress, fromUser)}"
                app:progressCheck="@{viewModel.duration}" />


            <TextView
                android:id="@+id/text_frequency_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_small"
                app:sineWaveFrequency="@{viewModel.frequency}"
                android:text="@string/source_frequency_text" />

            <SeekBar
                android:id="@+id/slider_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:min="@integer/sine_freq_min"
                android:max="@integer/sine_freq_max"
                android:onProgressChanged="@{(view, progress, fromUser) -> viewModel.onProgressChanged(view, progress, fromUser)}"
                app:progressCheck="@{viewModel.frequency}" />

        </LinearLayout>

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/save_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_audio_source" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>